[gd_scene load_steps=13 format=3 uid="uid://b1but5qx4fi7e"]

[ext_resource type="Script" path="res://Scripts/Script Jogador/ScriptJogador-Movimento.gd" id="1_v4dr1"]
[ext_resource type="PackedScene" uid="uid://bhj04ajpawc4v" path="res://Cenas/Balas/BalaPadrao.tscn" id="2_gju43"]
[ext_resource type="PackedScene" uid="uid://dwem01y40spx6" path="res://Cenas/VidaJogadorCena.tscn" id="3_ydxm1"]
[ext_resource type="Script" path="res://Scripts/gui.gd" id="4_esyds"]

[sub_resource type="CylinderMesh" id="CylinderMesh_o6hk1"]
top_radius = 0.25
bottom_radius = 0.25
height = 1.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xkl7m"]
albedo_color = Color(1, 0.435294, 0, 1)

[sub_resource type="PrismMesh" id="PrismMesh_leosj"]
material = SubResource("StandardMaterial3D_xkl7m")
size = Vector3(0.25, 0.25, 0.25)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nf3xh"]
height = 1.0
radius = 0.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8dhmc"]
height = 1.0
radius = 0.3

[sub_resource type="ViewportTexture" id="ViewportTexture_8vcfs"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u0h8f"]
draw_center = false
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.895073, 0.355171, 0.890033, 1)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_0xldi"]

[node name="Jogador" type="CharacterBody3D" node_paths=PackedStringArray("OutroHit", "area", "barraVida", "MeshAxis", "BulletTimer", "BulletSpawn") groups=["JogadorGrupo"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26936, 0)
collision_layer = 2
collision_mask = 5
axis_lock_angular_y = true
script = ExtResource("1_v4dr1")
OutroHit = NodePath("Area3D/OutroHit")
area = NodePath("Area3D")
barraVida = NodePath("GUI/Barra_Vida")
danoTiro = 12.0
raycastMask = 1
MeshAxis = NodePath("MeshAxis")
BulletTimer = NodePath("BulletTimer")
BulletSpawn = NodePath("MeshAxis/Nariz/BulletSpawnPos")
BulletScene = ExtResource("2_gju43")

[node name="MeshAxis" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshAxis"]
mesh = SubResource("CylinderMesh_o6hk1")
skeleton = NodePath("../..")

[node name="Nariz" type="MeshInstance3D" parent="MeshAxis"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.349702, -0.271759)
mesh = SubResource("PrismMesh_leosj")
skeleton = NodePath("../..")

[node name="BulletSpawnPos" type="Marker3D" parent="MeshAxis/Nariz"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CylinderShape3D_nf3xh")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-3.21423e-08, 0.991817, -0.12767, 2.96236e-08, 0.12767, 0.991817, 1, 2.80972e-08, -3.34848e-08, -1.25822, 13.7905, 0)
fov = 47.1392

[node name="BulletTimer" type="Timer" parent="."]
one_shot = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_8dhmc")

[node name="OutroHit" type="Timer" parent="Area3D"]
wait_time = 1.5
one_shot = true

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.969532, 0)
billboard = 1
texture = SubResource("ViewportTexture_8vcfs")

[node name="GUI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("4_esyds")

[node name="Barra_Vida" parent="GUI" instance=ExtResource("3_ydxm1")]
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 0.0
offset_top = 0.0
offset_right = 260.0
offset_bottom = 27.0
grow_horizontal = 1
grow_vertical = 1

[node name="Player_GUI" type="Control" parent="GUI"]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 640.0

[node name="Panel" type="Panel" parent="GUI/Player_GUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 1088.0
offset_bottom = 576.0
theme_override_styles/panel = SubResource("StyleBoxFlat_u0h8f")

[node name="BT_Upgrade1" type="Button" parent="GUI/Player_GUI/Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 320.0
offset_bottom = 448.0

[node name="Titulo_Upgrade" type="Label" parent="GUI/Player_GUI/Panel/BT_Upgrade1"]
layout_mode = 0
offset_left = 64.0
offset_top = 200.0
offset_right = 192.0
offset_bottom = 249.0
text = "Titulo do upgrade"
label_settings = SubResource("LabelSettings_0xldi")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Descrição_Upgrade" type="Label" parent="GUI/Player_GUI/Panel/BT_Upgrade1"]
layout_mode = 0
offset_left = 16.0
offset_top = 248.0
offset_right = 240.0
offset_bottom = 384.0
text = "[Aqui fica a descrição do que o upgrade faz]"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BT_Upgrade2" type="Button" parent="GUI/Player_GUI/Panel"]
layout_mode = 0
offset_left = 384.0
offset_top = 64.0
offset_right = 640.0
offset_bottom = 448.0

[node name="Titulo_Upgrade" type="Label" parent="GUI/Player_GUI/Panel/BT_Upgrade2"]
layout_mode = 0
offset_left = 64.0
offset_top = 200.0
offset_right = 192.0
offset_bottom = 249.0
text = "Titulo do upgrade"
label_settings = SubResource("LabelSettings_0xldi")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Descrição_Upgrade" type="Label" parent="GUI/Player_GUI/Panel/BT_Upgrade2"]
layout_mode = 0
offset_left = 16.0
offset_top = 248.0
offset_right = 240.0
offset_bottom = 384.0
text = "[Aqui fica a descrição do que o upgrade faz]"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BT_Upgrade3" type="Button" parent="GUI/Player_GUI/Panel"]
layout_mode = 0
offset_left = 704.0
offset_top = 64.0
offset_right = 960.0
offset_bottom = 448.0

[node name="Titulo_Upgrade" type="Label" parent="GUI/Player_GUI/Panel/BT_Upgrade3"]
layout_mode = 0
offset_left = 64.0
offset_top = 200.0
offset_right = 192.0
offset_bottom = 249.0
text = "Titulo do upgrade"
label_settings = SubResource("LabelSettings_0xldi")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Descrição_Upgrade" type="Label" parent="GUI/Player_GUI/Panel/BT_Upgrade3"]
layout_mode = 0
offset_left = 16.0
offset_top = 248.0
offset_right = 240.0
offset_bottom = 384.0
text = "[Aqui fica a descrição do que o upgrade faz]"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Respawn" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="timeout" from="Area3D/OutroHit" to="." method="_on_outro_hit_timeout"]
[connection signal="pressed" from="GUI/Player_GUI/Panel/BT_Upgrade1" to="GUI/Player_GUI" method="_on_bt_upgrade_1_pressed"]
[connection signal="pressed" from="GUI/Player_GUI/Panel/BT_Upgrade2" to="GUI/Player_GUI" method="_on_bt_upgrade_2_pressed"]
[connection signal="pressed" from="GUI/Player_GUI/Panel/BT_Upgrade3" to="GUI/Player_GUI" method="_on_bt_upgrade_3_pressed"]
[connection signal="timeout" from="Respawn" to="." method="_on_respawn_timeout"]
